Até aqui sinto que é possível começar com o Back-end

--- a/src/Dashboard-Secretario.html
+++ b/src/Dashboard-Secretario.html
@@ -11,6 +11,7 @@
     <!-- <script type="text/javascript" src="/build/HeaderEngine.js"></script> -->
     <script type="module" src="./Codes/Dash_DataCards.js"></script>
     <script type="module" src="./Codes/Congregacao.js"></script>
+    <script type="module" src="./Codes/Group_interacao.js"></script>
     <style>
         .ocultar{
             display: none;
@@ -130,8 +131,8 @@
         <section class="flex justify-center flex-wrap gap-4">
             <div class="dataCard card w-52 h-24">
                 <h3 class="titulo text-gray-500 font-medium text-sm">Publicadores Ativos</h3>
-                <p class="valor text-[#3f4d67] text-[22px] font-medium grow">124</p>
-                <span class="text-gray-500 font-normal text-xs">No último Mês</span>
+                <p class="valor text-[#3f4d67] text-[22px] font-medium grow"></p>
+                <span class="text-gray-500 font-normal text-xs"></span>
             </div>
             <div class="dataCard card w-52 h-24">
                 <h3 class="titulo text-gray-500 font-medium text-sm"></h3>
