--- a/src/Sec-cadastro.html
+++ b/src/Sec-cadastro.html
@@ -6,7 +6,8 @@
     <title></title>
       <link rel="stylesheet" href="/build/assets/css/app.css">
       <script src="./Codes/Cadastro_interacao.js" defer></script>
-      <script src="./Codes/Congregacao.js" defer></script>
+      <script type="module" src="./Codes/Congregacao.js" defer></script>
+      <script type="module" src="./Codes/Group_interacao.js"></script>
       <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <bod class=" h-screen w-screen font-poppins bg-[#f5f5f5] flex ">  
