--- a/src/Sup-Relatorio.html
+++ b/src/Sup-Relatorio.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script type="module" src="./Codes/Sup-Relatorio.js"></script>
     <script type="module" src="./Codes/Congregacao.js"></script>
+    <script type="module" src="./Codes/Group_interacao.js"></script>
 </head>
 <body class=" bg-[#F3F6F8] h-full w-full overflow-y-auto">
     <header class=" bg-white">
@@ -207,6 +208,19 @@
                 </article>
             </article>
         </section>
+        <section class=" flex flex-col gap-4">
+            <article class=" bg-white shadow-sm shadow-gray-200 rounded-md p-4">
+                <h3 class=" text-[#3F4D67] text-lg font-normal">Ultimos Relatórios</h3>
+                <p class=" text-[#7b7b7b] font-light text-sm">Aqui estão os relatórios que você enviou.</p>
+            </article>
+            <article class=" bg-white shadow-sm shadow-gray-200 rounded-md p-4">
+                <h3 class=" text-[#3F4D67] text-lg font-normal">Relatórios do Mês Passado</h3>
+                <p class=" text-[#7b7b7b] font-light text-sm">Aqui estão os relatórios que você enviou.</p>
+            </article>
+            <article class=" bg-white shadow-sm shadow-gray-200 rounded-md p-4">
+                <h3 class=" text-[#3F4D67] text-lg font-normal">Relatórios do Mês Fevereiro</h3>
+                <p class=" text-[#7b7b7b] font-light text-sm">Aqui estão os relatórios que você enviou.</p>
+            </article>
     </main>
 </body>
 </html>
