--- a/src/cadastro.html
+++ b/src/cadastro.html
@@ -5,11 +5,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Cadastrar</title>
       <!-- <link rel="stylesheet" href="/build/assets/css/app.css"> -->
        <link rel="stylesheet" href="./output.css">
       <script src="./Codes/Cadastro_interacao.js" defer></script>
       <script type="module" src="./Codes/Congregacao.js" defer></script>
+      <script type="module" src="./Codes/Group_interacao.js"></script>
       <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <bod class=" h-screen w-screen font-poppins bg-[#f5f5f5] flex ">  
